200 OK http://www.parliament.gh/parliamentarians/158

--- a/www.parliament.gh/4fa6d8d55e1f37e0c2014bf8035f70fef18bb354.yml
+++ b/www.parliament.gh/4fa6d8d55e1f37e0c2014bf8035f70fef18bb354.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:25:58 GMT
+    - Thu, 17 Nov 2016 18:09:39 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2268afc9fa8cc302730b31a0ebd95ef8f2%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479381958%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Df64a7547b03e9e35a61aa88477be1c0f;
-      expires=Thu, 17-Nov-2016 13:25:58 GMT; path=/
-    - csrf_xmen=a93e8e8038f8a7b15846b672fd9e7325; expires=Thu, 17-Nov-2016 13:25:58
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22fb7d2c446bbb90ec5bdd9a3c1be1c260%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479406179%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Db0e97758eaf565e85316996bbff02ca2;
+      expires=Thu, 17-Nov-2016 20:09:39 GMT; path=/
+    - csrf_xmen=02d4f8059b9824ec22ffff09f943b3f7; expires=Thu, 17-Nov-2016 20:09:39
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16551'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:25:58 GMT
+recorded_at: Thu, 17 Nov 2016 18:09:39 GMT
