200 OK http://www.parliament.gh/parliamentarians/386

--- a/www.parliament.gh/9fc7bac3fd6fe761852f8948f25b375e79b01338.yml
+++ b/www.parliament.gh/9fc7bac3fd6fe761852f8948f25b375e79b01338.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:26:22 GMT
+    - Thu, 17 Nov 2016 18:10:12 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22c3027b4f1bfb6ac47fcb98e226013474%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479381982%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D033b7a6488f037b7dfdd48a442336c6b;
-      expires=Thu, 17-Nov-2016 13:26:22 GMT; path=/
-    - csrf_xmen=20a77248f7cea47abaa4c23ac40a05d6; expires=Thu, 17-Nov-2016 13:26:22
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22b2ec22f11fa1f7faa9880a8766458e95%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479406212%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D9a19307c7bf6102f5f8e1c74118159a0;
+      expires=Thu, 17-Nov-2016 20:10:12 GMT; path=/
+    - csrf_xmen=d9c38b98bacce57f4db0a37d1ae4a537; expires=Thu, 17-Nov-2016 20:10:12
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16368'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:26:22 GMT
+recorded_at: Thu, 17 Nov 2016 18:10:12 GMT
