200 OK http://www.parliament.gh/parliamentarians/188

--- a/www.parliament.gh/00cb25d821a928bba8447428a914f1b09e459a22.yml
+++ b/www.parliament.gh/00cb25d821a928bba8447428a914f1b09e459a22.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:26:42 GMT
+    - Thu, 17 Nov 2016 18:10:28 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22a111af0610fba1b30a77c33f09538f81%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382002%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Ddccd89926bcab9efb4d3281dcace003c;
-      expires=Thu, 17-Nov-2016 13:26:42 GMT; path=/
-    - csrf_xmen=410f9e56ba3730bc19f85ece58a1757c; expires=Thu, 17-Nov-2016 13:26:42
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%220673fd98f34fd97b71ae05f96771b161%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479406228%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D5e287c3ef742272591fbfc04ded6d07a;
+      expires=Thu, 17-Nov-2016 20:10:28 GMT; path=/
+    - csrf_xmen=193b66995a7bfc8afef444dba3ad1ad5; expires=Thu, 17-Nov-2016 20:10:28
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '17053'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:26:42 GMT
+recorded_at: Thu, 17 Nov 2016 18:10:28 GMT
