--- a/www.parliament.gh/b1c8dc416b8c135306734202b699c5cd14643783.yml
+++ b/www.parliament.gh/b1c8dc416b8c135306734202b699c5cd14643783.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:27:04 GMT
+    - Thu, 17 Nov 2016 18:10:59 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22bdb89cc2d76de77c14793070ce6ab12d%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382024%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D3d8b8b02d0e6a2896c3e2bb010e42a23;
-      expires=Thu, 17-Nov-2016 13:27:04 GMT; path=/
-    - csrf_xmen=a5b23308b4be064187f5da71fdc63eba; expires=Thu, 17-Nov-2016 13:27:04
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22f7ede39cdf1f76840120594794f6e057%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479406259%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D88242f5cd755f435a51762e36a960c1e;
+      expires=Thu, 17-Nov-2016 20:10:59 GMT; path=/
+    - csrf_xmen=86abbf6aede2ceb820bceba96af8fa4c; expires=Thu, 17-Nov-2016 20:10:59
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16357'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:27:05 GMT
+recorded_at: Thu, 17 Nov 2016 18:11:00 GMT
