200 OK http://www.parliament.gh/parliamentarians/202

--- a/www.parliament.gh/e84b7fb097df4ab1b23ba9effb6aab302544ba15.yml
+++ b/www.parliament.gh/e84b7fb097df4ab1b23ba9effb6aab302544ba15.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:27:27 GMT
+    - Thu, 17 Nov 2016 18:11:23 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22f83c7eb8f0572948c28a9c95f2506750%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382047%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7De12ec9d0fac8fb490485c61510b011f3;
-      expires=Thu, 17-Nov-2016 13:27:27 GMT; path=/
-    - csrf_xmen=50641ad786d8973ebfc3321d4485f433; expires=Thu, 17-Nov-2016 13:27:27
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22cb8272aad1135873de482121f1e1390a%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479406283%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D38c0e3b898882357e25e44ef18376932;
+      expires=Thu, 17-Nov-2016 20:11:23 GMT; path=/
+    - csrf_xmen=2b0f6804116297510878b177515acb5d; expires=Thu, 17-Nov-2016 20:11:23
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16474'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:27:27 GMT
+recorded_at: Thu, 17 Nov 2016 18:11:23 GMT
