--- a/www.parliament.gh/7e89c4a88b91e4c1874c494ba06c7d36658b1ad1.yml
+++ b/www.parliament.gh/7e89c4a88b91e4c1874c494ba06c7d36658b1ad1.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:27:44 GMT
+    - Thu, 17 Nov 2016 18:11:56 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%227c93af65b510a87994cfd8496d8d5888%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382064%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dd0801d82b019f279dc4a4b128e9cd054;
-      expires=Thu, 17-Nov-2016 13:27:44 GMT; path=/
-    - csrf_xmen=dd22bc1d6d51c10d65d2b7cdad134ecd; expires=Thu, 17-Nov-2016 13:27:44
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22dd28ebbc5024ae2ddee38152846f7257%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479406316%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D07a91021f006a1343cbfdb247e180120;
+      expires=Thu, 17-Nov-2016 20:11:56 GMT; path=/
+    - csrf_xmen=754d942878acb825be64df28f8fac0a8; expires=Thu, 17-Nov-2016 20:11:56
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16336'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:27:44 GMT
+recorded_at: Thu, 17 Nov 2016 18:11:56 GMT
