--- a/www.parliament.gh/436eab74f287b1e0f8beccf9631d7d65c9de0f8a.yml
+++ b/www.parliament.gh/436eab74f287b1e0f8beccf9631d7d65c9de0f8a.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:28:03 GMT
+    - Thu, 17 Nov 2016 18:12:28 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22a01619a7a09fc37b96d62b933fa60b56%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382083%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D7230a9691c9b101ecf53c08f29e21a81;
-      expires=Thu, 17-Nov-2016 13:28:03 GMT; path=/
-    - csrf_xmen=8a30088a7cb9850fcd54a1a6c9276c6c; expires=Thu, 17-Nov-2016 13:28:03
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22f4fb6fceec95ed9e2a5a01877850ef08%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479406349%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D84a31853db37e23a45c347269559bf4a;
+      expires=Thu, 17-Nov-2016 20:12:29 GMT; path=/
+    - csrf_xmen=38ecc9a81602ff24cfe1e610e18fa706; expires=Thu, 17-Nov-2016 20:12:29
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16583'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:28:03 GMT
+recorded_at: Thu, 17 Nov 2016 18:12:29 GMT
