200 OK http://www.parliament.gh/parliamentarians/205

--- a/www.parliament.gh/0e58461c2092173ff7d22d6489c20e6c232498b4.yml
+++ b/www.parliament.gh/0e58461c2092173ff7d22d6489c20e6c232498b4.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:28:25 GMT
+    - Thu, 17 Nov 2016 18:12:49 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22e987ecf04351be4b25b685a798ea913a%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382105%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D2225eef9c36f2aee2f32694b2873a7c8;
-      expires=Thu, 17-Nov-2016 13:28:25 GMT; path=/
-    - csrf_xmen=e2536309dbf7466b697a873f536ab9ee; expires=Thu, 17-Nov-2016 13:28:25
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%226d1c52a69af4bd4f8e4c01e9c939bcb5%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479406369%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D5026cbf602242fbd854f487f7e23a022;
+      expires=Thu, 17-Nov-2016 20:12:49 GMT; path=/
+    - csrf_xmen=6e9796a91d80bc89a4652b0c98ca6585; expires=Thu, 17-Nov-2016 20:12:49
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16431'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:28:25 GMT
+recorded_at: Thu, 17 Nov 2016 18:12:49 GMT
