200 OK http://www.parliament.gh/parliamentarians/331

--- a/www.parliament.gh/653e9035287b613934c0bed659ddd05658fcaf5b.yml
+++ b/www.parliament.gh/653e9035287b613934c0bed659ddd05658fcaf5b.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:28:40 GMT
+    - Thu, 17 Nov 2016 18:13:24 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22d49ea20939fe52b4b1f9cb28640c5dca%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382120%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D8668ee7ea654a0d1d45aa5ee5d74ea30;
-      expires=Thu, 17-Nov-2016 13:28:40 GMT; path=/
-    - csrf_xmen=f7dc3e2eb86cb8a0aa8ac2bcb1c57281; expires=Thu, 17-Nov-2016 13:28:40
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22ffa1ecd99c04ff33589af917d37b39e1%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479406404%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D35a44cbcbb9af32beacb3536823c5cf4;
+      expires=Thu, 17-Nov-2016 20:13:24 GMT; path=/
+    - csrf_xmen=7995e69bf4e1dae53d98de3c9f2afc1a; expires=Thu, 17-Nov-2016 20:13:24
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16372'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:28:41 GMT
+recorded_at: Thu, 17 Nov 2016 18:13:24 GMT
