200 OK http://www.parliament.gh/parliamentarians/302

--- a/www.parliament.gh/d160209ec97ac19d67242951742d9c90418e3c45.yml
+++ b/www.parliament.gh/d160209ec97ac19d67242951742d9c90418e3c45.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:29:00 GMT
+    - Thu, 17 Nov 2016 18:13:58 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2298e6abcbbe4319024b8ea495ced26a22%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382140%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D37dcd18d995d06fa9bb75f146f56d603;
-      expires=Thu, 17-Nov-2016 13:29:00 GMT; path=/
-    - csrf_xmen=3c7ffd6b9f87d0ab96b4169bb2782627; expires=Thu, 17-Nov-2016 13:29:00
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2236a035759768fd5e82ea34c155c49072%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479406438%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D7d16982bf06a9cffdf711fbbe2ff8fe1;
+      expires=Thu, 17-Nov-2016 20:13:58 GMT; path=/
+    - csrf_xmen=7e8d31f442718487467eddb366524089; expires=Thu, 17-Nov-2016 20:13:58
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16845'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:29:00 GMT
+recorded_at: Thu, 17 Nov 2016 18:13:58 GMT
