200 OK http://www.parliament.gh/parliamentarians/206

--- a/www.parliament.gh/79c6a32823b64d6781ea07d37d81c7f0c5144ca8.yml
+++ b/www.parliament.gh/79c6a32823b64d6781ea07d37d81c7f0c5144ca8.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:29:14 GMT
+    - Thu, 17 Nov 2016 18:14:33 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%223da95251b48cd439ab43ac9ee4979c49%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382154%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dda23105fe05f393622c564c9cd42b1bd;
-      expires=Thu, 17-Nov-2016 13:29:14 GMT; path=/
-    - csrf_xmen=d51a77232c02c20c9b9f8e52cbf0904b; expires=Thu, 17-Nov-2016 13:29:14
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22e3deb7d36b800bfebd573fa57856df19%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479406473%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7De35bd045d347ba98cbdba0ae428ac3a4;
+      expires=Thu, 17-Nov-2016 20:14:33 GMT; path=/
+    - csrf_xmen=6234520de8a9e99f00c5f0532586c3fc; expires=Thu, 17-Nov-2016 20:14:33
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16545'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:29:14 GMT
+recorded_at: Thu, 17 Nov 2016 18:14:33 GMT
