200 OK http://www.parliament.gh/parliamentarians/309

--- a/www.parliament.gh/68fa83139e57bada4c54b55b5fc8ef77eb3e453e.yml
+++ b/www.parliament.gh/68fa83139e57bada4c54b55b5fc8ef77eb3e453e.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:31:38 GMT
+    - Thu, 17 Nov 2016 18:14:49 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22493651cb43cd3c971f81216d5b8e43f7%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382298%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D06f09287c7f64b9ac3233285ffd2b26d;
-      expires=Thu, 17-Nov-2016 13:31:38 GMT; path=/
-    - csrf_xmen=5f8cfbe3d74cb3903184eb6a12b9cef1; expires=Thu, 17-Nov-2016 13:31:38
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%220e655ab16f0cfe04ae7213b8dcdc6967%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479406489%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D07388fc68e1f0190f06b392136617e54;
+      expires=Thu, 17-Nov-2016 20:14:49 GMT; path=/
+    - csrf_xmen=1a2d4f80f5638a9faab74788887664d3; expires=Thu, 17-Nov-2016 20:14:49
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16513'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:31:38 GMT
+recorded_at: Thu, 17 Nov 2016 18:14:49 GMT
