--- a/www.parliament.gh/b886d4e60bcb81c04caab5fd0759ff9d413294a1.yml
+++ b/www.parliament.gh/b886d4e60bcb81c04caab5fd0759ff9d413294a1.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:31:52 GMT
+    - Thu, 17 Nov 2016 18:15:24 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%224cb43f056fa52eb611d8425c22585252%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382312%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D24807ec37b0f293fc12270e25ce4b6d5;
-      expires=Thu, 17-Nov-2016 13:31:52 GMT; path=/
-    - csrf_xmen=8ccffebaac7a61973ecd62870deec3f5; expires=Thu, 17-Nov-2016 13:31:52
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22e202e3809e2d645830bacc75f6ce9801%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479406524%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dbd56510c6aa5c51c04b9ebf83f01610e;
+      expires=Thu, 17-Nov-2016 20:15:24 GMT; path=/
+    - csrf_xmen=596d2d3ca9aad9384f461d6a8f3a160e; expires=Thu, 17-Nov-2016 20:15:24
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16552'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:31:52 GMT
+recorded_at: Thu, 17 Nov 2016 18:15:24 GMT
