--- a/www.parliament.gh/b95f0b3b63ee745723e290338b851129e90efeae.yml
+++ b/www.parliament.gh/b95f0b3b63ee745723e290338b851129e90efeae.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:32:07 GMT
+    - Thu, 17 Nov 2016 18:15:43 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%227317e62c93d4c5442f32cac3613082a0%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382327%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D3a3b9633d001e92471c99a7d2180057e;
-      expires=Thu, 17-Nov-2016 13:32:07 GMT; path=/
-    - csrf_xmen=a767acaf61dcc36a7063264f8bad9e0d; expires=Thu, 17-Nov-2016 13:32:07
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%228d64e5ae5eeb7b37a705eb81eb45354a%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479406543%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D0361d9af6ab67da9b4cf817ed074426b;
+      expires=Thu, 17-Nov-2016 20:15:43 GMT; path=/
+    - csrf_xmen=c6f6f77bbfe458dcc9806a4e91bc65c1; expires=Thu, 17-Nov-2016 20:15:43
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16544'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:32:07 GMT
+recorded_at: Thu, 17 Nov 2016 18:15:43 GMT
