--- a/www.parliament.gh/dea2c607ccd5e4df74f0b76edacdbcb7b91e8eb2.yml
+++ b/www.parliament.gh/dea2c607ccd5e4df74f0b76edacdbcb7b91e8eb2.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:32:21 GMT
+    - Thu, 17 Nov 2016 18:16:17 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22477a6e2220f9c98dc36d7f979ebf1416%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382341%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D57a17a8e1a587f77f5e54554aabaa77d;
-      expires=Thu, 17-Nov-2016 13:32:21 GMT; path=/
-    - csrf_xmen=6a5e908f72a01bdf61df9a84410abf36; expires=Thu, 17-Nov-2016 13:32:21
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%225dc128ad4b25029e32db24b6ae5e2169%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479406577%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D6a0b85bfbf6eefd43af2126fec7e7b22;
+      expires=Thu, 17-Nov-2016 20:16:17 GMT; path=/
+    - csrf_xmen=9a556ae0f56ffe8ab27c0f07c32cfdf6; expires=Thu, 17-Nov-2016 20:16:17
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16754'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:32:21 GMT
+recorded_at: Thu, 17 Nov 2016 18:16:17 GMT
