--- a/www.parliament.gh/74fb56efd1b18fefb252286caa887813eca19bcf.yml
+++ b/www.parliament.gh/74fb56efd1b18fefb252286caa887813eca19bcf.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:32:45 GMT
+    - Thu, 17 Nov 2016 18:16:50 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22ed57652ca48f8a7fb07e2d4038ed741b%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382365%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D77a5bba42d500c94bdab1e895536ab20;
-      expires=Thu, 17-Nov-2016 13:32:45 GMT; path=/
-    - csrf_xmen=bc3ca2e6ba991b09b45e2f60bda0be52; expires=Thu, 17-Nov-2016 13:32:45
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%229da9363a1b790225151039ab9ae59a16%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479406610%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D20de6139ac0b5ac47da33e5fb0ccf655;
+      expires=Thu, 17-Nov-2016 20:16:50 GMT; path=/
+    - csrf_xmen=c1888e7fbfe036abc8ed2dc3e1888b33; expires=Thu, 17-Nov-2016 20:16:50
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16527'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:32:45 GMT
+recorded_at: Thu, 17 Nov 2016 18:16:50 GMT
