200 OK http://www.parliament.gh/parliamentarians/211

--- a/www.parliament.gh/afa4ecb483fd38758e77c5305802bd495eef5739.yml
+++ b/www.parliament.gh/afa4ecb483fd38758e77c5305802bd495eef5739.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:33:07 GMT
+    - Thu, 17 Nov 2016 18:17:09 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%227b03abbdd5c9864fd3856faacc12e88c%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382387%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D711c15438e5a0cd61779461a3fb5e4e4;
-      expires=Thu, 17-Nov-2016 13:33:07 GMT; path=/
-    - csrf_xmen=44d97045b71e979555ffde207ec81a14; expires=Thu, 17-Nov-2016 13:33:07
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22e326cbdb707940acad2460fc31152aa6%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479406629%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D4ecc82e9501c62e4b194ea2ac95bc77e;
+      expires=Thu, 17-Nov-2016 20:17:09 GMT; path=/
+    - csrf_xmen=071ba99a5fd53c18099a9f18df94e2d6; expires=Thu, 17-Nov-2016 20:17:09
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16525'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:33:07 GMT
+recorded_at: Thu, 17 Nov 2016 18:17:09 GMT
