200 OK http://www.parliament.gh/parliamentarians/page/220

--- a/www.parliament.gh/04d525a830d11d5bb5dd356e3b4b6c8d52504aa1.yml
+++ b/www.parliament.gh/04d525a830d11d5bb5dd356e3b4b6c8d52504aa1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:31:22 GMT
+    - Thu, 17 Nov 2016 18:17:26 GMT
     Server:
     - Apache
     X-Powered-By:
@@ -30,18 +30,18 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=cb5338a4db7b001f06b24c894c1a8821; path=/
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22c1b08a751b1c29eb1d34fce6402b27b2%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382282%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D8f9957e9292736a81ad5c392446f3390;
-      expires=Thu, 17-Nov-2016 13:31:22 GMT; path=/
-    - csrf_xmen=fd61fa30c754a03486f151185611d511; expires=Thu, 17-Nov-2016 13:31:22
+    - PHPSESSID=fe3c8ee83f0aac72121ebb445a1114a2; path=/
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%229156bd4669b3cf9c1daa6ae9ff6c1092%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479406646%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D287a8fcb8ba460801b67e08d026ba8d2;
+      expires=Thu, 17-Nov-2016 20:17:26 GMT; path=/
+    - csrf_xmen=8ec7e55df6a3dce4fdcbb5199dce7f70; expires=Thu, 17-Nov-2016 20:17:26
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '78042'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:31:23 GMT
+recorded_at: Thu, 17 Nov 2016 18:17:26 GMT
