200 OK http://www.parliament.gh/parliamentarians/212

--- a/www.parliament.gh/8f9b0e13d55c4c81add673f6b07b7e399f450c0e.yml
+++ b/www.parliament.gh/8f9b0e13d55c4c81add673f6b07b7e399f450c0e.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:33:30 GMT
+    - Thu, 17 Nov 2016 18:20:14 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%221919f5a3a6b5bdc9faf15cd9638f1dd1%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382410%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D73719fbdde866c42b888159698d2c274;
-      expires=Thu, 17-Nov-2016 13:33:30 GMT; path=/
-    - csrf_xmen=fba7dcc13eaa414c77a4c6b6c3a84d1b; expires=Thu, 17-Nov-2016 13:33:30
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%223a9c260f4670d0857af2e11916e2b1e1%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479406814%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D946e802723d2065c5af0aadb345d73c6;
+      expires=Thu, 17-Nov-2016 20:20:14 GMT; path=/
+    - csrf_xmen=ef1ddb5e397b450977631a3b261568c4; expires=Thu, 17-Nov-2016 20:20:14
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16691'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:33:30 GMT
+recorded_at: Thu, 17 Nov 2016 18:20:14 GMT
