--- a/www.parliament.gh/259a6727a4baa95e3aee79169a25931a7822eb41.yml
+++ b/www.parliament.gh/259a6727a4baa95e3aee79169a25931a7822eb41.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:33:45 GMT
+    - Thu, 17 Nov 2016 18:20:49 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22c7c461dcb840786fae4fc0b30dfc490d%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382425%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D2d7737324888dc97503294c5c7437b51;
-      expires=Thu, 17-Nov-2016 13:33:45 GMT; path=/
-    - csrf_xmen=dff0150e325830239935b0ceaf3bbbfd; expires=Thu, 17-Nov-2016 13:33:45
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%221c1297e9be40e1dd878af5331ccc216d%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479406849%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D2a9c6f1a6cd1f49f52a06cca6b60eff6;
+      expires=Thu, 17-Nov-2016 20:20:49 GMT; path=/
+    - csrf_xmen=1380d96c665fc98c4834b92d60b573a6; expires=Thu, 17-Nov-2016 20:20:49
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16541'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:33:45 GMT
+recorded_at: Thu, 17 Nov 2016 18:20:49 GMT
