--- a/www.parliament.gh/987a97ef6d1c5065e4a65b1630641aa6ff412a4e.yml
+++ b/www.parliament.gh/987a97ef6d1c5065e4a65b1630641aa6ff412a4e.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:34:08 GMT
+    - Thu, 17 Nov 2016 18:21:27 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2222a31a44f8e0480d0aae3f6f0d2b98c4%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382448%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D0a2858134e7444a8f9d38e03941fbb37;
-      expires=Thu, 17-Nov-2016 13:34:08 GMT; path=/
-    - csrf_xmen=f99014558e9c29eaaf265e699f3e2c00; expires=Thu, 17-Nov-2016 13:34:08
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22d92bfee6a88fa0d31b7176781785e295%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479406887%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D0d42e6d11981b33b91a599b25d3a116a;
+      expires=Thu, 17-Nov-2016 20:21:27 GMT; path=/
+    - csrf_xmen=aeadd59d09c08fa275026e917303ea96; expires=Thu, 17-Nov-2016 20:21:27
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16344'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:34:08 GMT
+recorded_at: Thu, 17 Nov 2016 18:21:27 GMT
