200 OK http://www.parliament.gh/parliamentarians/214

--- a/www.parliament.gh/0425655197c2709b001b94fbc3e99c3fc443eb91.yml
+++ b/www.parliament.gh/0425655197c2709b001b94fbc3e99c3fc443eb91.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:34:26 GMT
+    - Thu, 17 Nov 2016 18:22:04 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22666f0627ecca122c1e7d544a39a2ec08%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382466%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D4bb66eb619f3cfd595f58ab96d1b31c5;
-      expires=Thu, 17-Nov-2016 13:34:26 GMT; path=/
-    - csrf_xmen=349450cfb6c1a71d35e8a4ba53b79232; expires=Thu, 17-Nov-2016 13:34:26
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22d1cdc3cb46c9145a6458a3065969f1d2%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479406924%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D059569dae181a62401ac652a9a480879;
+      expires=Thu, 17-Nov-2016 20:22:04 GMT; path=/
+    - csrf_xmen=067e34c0f1c3d0840636de38032edab2; expires=Thu, 17-Nov-2016 20:22:04
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16447'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:34:26 GMT
+recorded_at: Thu, 17 Nov 2016 18:22:04 GMT
