200 OK http://www.parliament.gh/parliamentarians/216

--- a/www.parliament.gh/87a323ea323c241f1fa750b84776728e53ebaee3.yml
+++ b/www.parliament.gh/87a323ea323c241f1fa750b84776728e53ebaee3.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:34:43 GMT
+    - Thu, 17 Nov 2016 18:22:21 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%222bb51415c1e800d0e8a006d9352eef44%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382483%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Df149300f11618f6abba8a83d93050391;
-      expires=Thu, 17-Nov-2016 13:34:43 GMT; path=/
-    - csrf_xmen=b5feb9dc344fb8ba0f6e8fbbab5c268c; expires=Thu, 17-Nov-2016 13:34:43
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2201af445870dffb1b462c3c0925dc7a50%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479406941%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D957820400b37a656955f56284d890c2c;
+      expires=Thu, 17-Nov-2016 20:22:21 GMT; path=/
+    - csrf_xmen=69bebc5f5af0acd23b1029aad510153c; expires=Thu, 17-Nov-2016 20:22:21
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16799'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:34:43 GMT
+recorded_at: Thu, 17 Nov 2016 18:22:21 GMT
