--- a/www.parliament.gh/736a7d2e9f438d66605b178408c1f2ee69869354.yml
+++ b/www.parliament.gh/736a7d2e9f438d66605b178408c1f2ee69869354.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:35:02 GMT
+    - Thu, 17 Nov 2016 18:22:56 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22ad94a2f320611e28527338c70ffb87a9%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382503%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D6bfdfb9d1790425412384aeb9afe2d78;
-      expires=Thu, 17-Nov-2016 13:35:03 GMT; path=/
-    - csrf_xmen=9702cc398e76d14885be2eb382a3b56d; expires=Thu, 17-Nov-2016 13:35:03
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2225561d38e52b8ab7e1a7092d02001a63%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479406976%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D2b7e473fa0e2a31dd8677df0ecadff42;
+      expires=Thu, 17-Nov-2016 20:22:56 GMT; path=/
+    - csrf_xmen=20d37b4c730ae5aeb9f063f49693c0f2; expires=Thu, 17-Nov-2016 20:22:56
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16540'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:35:03 GMT
+recorded_at: Thu, 17 Nov 2016 18:22:56 GMT
