--- a/www.parliament.gh/909d1bfee3bef695c68f176677acbab949075623.yml
+++ b/www.parliament.gh/909d1bfee3bef695c68f176677acbab949075623.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:35:19 GMT
+    - Thu, 17 Nov 2016 18:23:13 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22f01216200af33bb1a199f6bd0d6bf731%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382519%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D6f76496efd2556db21304b1d6a920506;
-      expires=Thu, 17-Nov-2016 13:35:19 GMT; path=/
-    - csrf_xmen=95b6b2208d3d497195629d6d08b1d407; expires=Thu, 17-Nov-2016 13:35:19
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22ddf0eea0e64c45fd0a465007f85f962e%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479406993%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D829b83639eacf3ac900219a221d1dd25;
+      expires=Thu, 17-Nov-2016 20:23:13 GMT; path=/
+    - csrf_xmen=867b07085318942245e54b76a573c76d; expires=Thu, 17-Nov-2016 20:23:13
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16649'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:35:19 GMT
+recorded_at: Thu, 17 Nov 2016 18:23:13 GMT
