--- a/www.parliament.gh/e0ce312c4211565f79cdbc22f5b97d47a4f3d845.yml
+++ b/www.parliament.gh/e0ce312c4211565f79cdbc22f5b97d47a4f3d845.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:35:46 GMT
+    - Thu, 17 Nov 2016 18:23:49 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22bda5c76719c8c30263447ea5600f408b%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382547%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D8d31db244d8f3e83495b97736f5fa2b1;
-      expires=Thu, 17-Nov-2016 13:35:47 GMT; path=/
-    - csrf_xmen=5ea0e59272801ec927c7a243f62fae85; expires=Thu, 17-Nov-2016 13:35:46
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%225c8b3be444d21f58c5ee1dbaa9f6b8b6%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479407029%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Df4131cb8eaa7bc3c56c165904f29e055;
+      expires=Thu, 17-Nov-2016 20:23:49 GMT; path=/
+    - csrf_xmen=98e772c4f8f5816dac63e5a421b9e4aa; expires=Thu, 17-Nov-2016 20:23:49
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '17036'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:35:47 GMT
+recorded_at: Thu, 17 Nov 2016 18:23:49 GMT
