--- a/www.parliament.gh/a768be7856c7e9b5511da71ec91d39d7baf40707.yml
+++ b/www.parliament.gh/a768be7856c7e9b5511da71ec91d39d7baf40707.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:36:03 GMT
+    - Thu, 17 Nov 2016 18:24:24 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%228a8eb8ee59b705437a3b30d48b8756c4%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382564%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D1348a31dd2bff5efe76deb740261cf17;
-      expires=Thu, 17-Nov-2016 13:36:04 GMT; path=/
-    - csrf_xmen=3af1117ded9f7e8ecc5f8275825d86ec; expires=Thu, 17-Nov-2016 13:36:03
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22215a501b82fcffe1a7225eec48d62fa8%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479407064%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Ddd533b5f7570fc2bd3fdc6d0aae5e3ba;
+      expires=Thu, 17-Nov-2016 20:24:24 GMT; path=/
+    - csrf_xmen=151a1538daa959a5ed63bfb39c8886f2; expires=Thu, 17-Nov-2016 20:24:24
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16627'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:36:04 GMT
+recorded_at: Thu, 17 Nov 2016 18:24:24 GMT
