--- a/www.parliament.gh/b8beb4db05fe32611f69fb8131cd8ed60dfd28b9.yml
+++ b/www.parliament.gh/b8beb4db05fe32611f69fb8131cd8ed60dfd28b9.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:36:26 GMT
+    - Thu, 17 Nov 2016 18:24:57 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22f51f801afbc54e6ce9a605beb73b8382%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382586%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D0a953d8ecd27be91c46c651c5a56287c;
-      expires=Thu, 17-Nov-2016 13:36:26 GMT; path=/
-    - csrf_xmen=43f6c9c87608ccc91d9c2f28d80248ec; expires=Thu, 17-Nov-2016 13:36:26
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22e6cd69571b2e858076d5d721fdc06ac5%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479407097%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D11ff91c265239e5f0a471b2d34c08046;
+      expires=Thu, 17-Nov-2016 20:24:57 GMT; path=/
+    - csrf_xmen=f26363463bf6c10d01c728b56b5720bf; expires=Thu, 17-Nov-2016 20:24:57
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16775'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:36:26 GMT
+recorded_at: Thu, 17 Nov 2016 18:24:58 GMT
