--- a/www.parliament.gh/ee6571a616c5f4aedfc693f603a8645f58f1c75d.yml
+++ b/www.parliament.gh/ee6571a616c5f4aedfc693f603a8645f58f1c75d.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:36:41 GMT
+    - Thu, 17 Nov 2016 18:25:21 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22b9a2c2d68c7c360dfd590a8a1eeff572%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382601%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D4320ced709d14cf2ee4505a9df7285ee;
-      expires=Thu, 17-Nov-2016 13:36:41 GMT; path=/
-    - csrf_xmen=19df152c19c0c10d0115410660e6ab30; expires=Thu, 17-Nov-2016 13:36:41
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%229ca78ddfc0b9a7fc7894e5e32b2f2122%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479407121%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D86455bbff92d8be8d39a5a5156920a8b;
+      expires=Thu, 17-Nov-2016 20:25:21 GMT; path=/
+    - csrf_xmen=acd28c264b40abc8f8590a1b02212c85; expires=Thu, 17-Nov-2016 20:25:21
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16588'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:36:41 GMT
+recorded_at: Thu, 17 Nov 2016 18:25:21 GMT
