200 OK http://www.parliament.gh/parliamentarians/402

--- a/www.parliament.gh/80d8b03bfad6e55507e2a0b109c28efdd8b7ca4d.yml
+++ b/www.parliament.gh/80d8b03bfad6e55507e2a0b109c28efdd8b7ca4d.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:36:58 GMT
+    - Thu, 17 Nov 2016 18:25:36 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22fc6da6d5a3f2aa1af33d57de09389df1%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382618%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D4a661c0f580194ccfa70b072c805242d;
-      expires=Thu, 17-Nov-2016 13:36:58 GMT; path=/
-    - csrf_xmen=3cb878fdbcfcfba9751d434228cb750f; expires=Thu, 17-Nov-2016 13:36:58
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22c7fd767359b07252ffc62e7615d97d6f%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479407137%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dbdc75d5e3adb9d6346d9a0d21b9c069f;
+      expires=Thu, 17-Nov-2016 20:25:37 GMT; path=/
+    - csrf_xmen=37782a8b030b33680c9ea542c5d5599e; expires=Thu, 17-Nov-2016 20:25:37
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16385'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:36:58 GMT
+recorded_at: Thu, 17 Nov 2016 18:25:37 GMT
