200 OK http://www.parliament.gh/parliamentarians/272

--- a/www.parliament.gh/d23a31c1f9b189e51db532f25e15cda8803f216d.yml
+++ b/www.parliament.gh/d23a31c1f9b189e51db532f25e15cda8803f216d.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:37:34 GMT
+    - Thu, 17 Nov 2016 18:26:17 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2233fd40485b7cb3fe262f1107f716f5a9%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382655%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dbd43a06cfd05568d09aa67d0ced0e561;
-      expires=Thu, 17-Nov-2016 13:37:35 GMT; path=/
-    - csrf_xmen=838b68715b3ca527119f56125f0b0af4; expires=Thu, 17-Nov-2016 13:37:35
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22ad5bd16a41ff31223f2eafdcab79d7a9%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479407177%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dc59d5a664d2087fb3ddf3865070e1006;
+      expires=Thu, 17-Nov-2016 20:26:17 GMT; path=/
+    - csrf_xmen=9f3363bec5905f153a2503b192d95b9c; expires=Thu, 17-Nov-2016 20:26:17
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16770'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:37:35 GMT
+recorded_at: Thu, 17 Nov 2016 18:26:17 GMT
