--- a/www.parliament.gh/af792daa07a99a042e4437d2df9dbb91276eea22.yml
+++ b/www.parliament.gh/af792daa07a99a042e4437d2df9dbb91276eea22.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:39:57 GMT
+    - Thu, 17 Nov 2016 18:26:52 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2263d790ff8bcb668572ee72bef76b2b57%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382798%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Db530f926fa125892d55908f3a1fe2dc8;
-      expires=Thu, 17-Nov-2016 13:39:58 GMT; path=/
-    - csrf_xmen=d39e41922d49294e25ea56e883172c99; expires=Thu, 17-Nov-2016 13:39:57
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22391b1f7e018a59d8c0509139d9abe537%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479407212%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Daa5ed047cff0d1dfc8cc941cb4b24271;
+      expires=Thu, 17-Nov-2016 20:26:52 GMT; path=/
+    - csrf_xmen=c150e656539f9a9c231c6b63e5ee930a; expires=Thu, 17-Nov-2016 20:26:52
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16516'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:39:58 GMT
+recorded_at: Thu, 17 Nov 2016 18:26:52 GMT
