--- a/www.parliament.gh/aef9c47ee67b9b1b43368d1c0e00f3fac6c058cb.yml
+++ b/www.parliament.gh/aef9c47ee67b9b1b43368d1c0e00f3fac6c058cb.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:40:25 GMT
+    - Thu, 17 Nov 2016 18:27:25 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22ec3a20b5f17a9e2cb4acd2f83e0c827d%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382825%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D1ac2083ea362a34a1efc36e61224aa29;
-      expires=Thu, 17-Nov-2016 13:40:25 GMT; path=/
-    - csrf_xmen=67aaec02dd0b3b1428c72a004a6664d4; expires=Thu, 17-Nov-2016 13:40:25
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22d6c97c03646077392079b0965dc189e1%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479407245%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D8ab9abf75cd04146b74c1ddd6b09bfa6;
+      expires=Thu, 17-Nov-2016 20:27:25 GMT; path=/
+    - csrf_xmen=0d657731c5f35e8ae4da6dcbee2ffa95; expires=Thu, 17-Nov-2016 20:27:25
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16355'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:40:25 GMT
+recorded_at: Thu, 17 Nov 2016 18:27:25 GMT
