--- a/www.parliament.gh/277e0880200175fb05926eb53c15b99f09238b10.yml
+++ b/www.parliament.gh/277e0880200175fb05926eb53c15b99f09238b10.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:40:47 GMT
+    - Thu, 17 Nov 2016 18:28:00 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2218d91071031cb06387d92aeeddfda37f%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382847%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Da6239723ef8523884e4096ffef9eacaa;
-      expires=Thu, 17-Nov-2016 13:40:47 GMT; path=/
-    - csrf_xmen=981ed004669a6db36bd604db7d4ccde9; expires=Thu, 17-Nov-2016 13:40:47
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22786a1f3eb7906c7f80c904349d5f7572%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479407280%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dece49b39a0bf41c1142ade0f2d43624c;
+      expires=Thu, 17-Nov-2016 20:28:00 GMT; path=/
+    - csrf_xmen=a5fc747625bf3de9efdd921a2b13018c; expires=Thu, 17-Nov-2016 20:28:00
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16588'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:40:48 GMT
+recorded_at: Thu, 17 Nov 2016 18:28:00 GMT
