200 OK http://www.parliament.gh/parliamentarians/404

--- a/www.parliament.gh/f27eeb85ad6e02bfd977812e1ebf57cbf1308192.yml
+++ b/www.parliament.gh/f27eeb85ad6e02bfd977812e1ebf57cbf1308192.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:41:24 GMT
+    - Thu, 17 Nov 2016 18:28:56 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2250e5d028e6ce7769ecf576b0669098be%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382884%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D1979b376e904b8d8dff5d271870097ce;
-      expires=Thu, 17-Nov-2016 13:41:24 GMT; path=/
-    - csrf_xmen=7aa73d99a6a33f2a08c4d417efb33ef3; expires=Thu, 17-Nov-2016 13:41:24
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22814a7572caa6d2a748611d8357cacc89%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479407336%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D0dae9e6a1d220289fd938a7c146ef9e9;
+      expires=Thu, 17-Nov-2016 20:28:56 GMT; path=/
+    - csrf_xmen=8b2d1d00ae1a6a423d2211d2b416147a; expires=Thu, 17-Nov-2016 20:28:56
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16794'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:41:24 GMT
+recorded_at: Thu, 17 Nov 2016 18:28:56 GMT
