200 OK http://www.parliament.gh/parliamentarians/222

--- a/www.parliament.gh/8eafe8c75ab0a63f033d7db55cd8483d2d9955fd.yml
+++ b/www.parliament.gh/8eafe8c75ab0a63f033d7db55cd8483d2d9955fd.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:41:39 GMT
+    - Thu, 17 Nov 2016 18:29:29 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22800ab73b90a39e9ffbf8a509e5fe0c19%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382899%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Db96ea6f4d1cb33b69032ccd60ea2b168;
-      expires=Thu, 17-Nov-2016 13:41:39 GMT; path=/
-    - csrf_xmen=b31884d86331f55a31d04589a22f6480; expires=Thu, 17-Nov-2016 13:41:39
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22d49210c332dbe52e671f27129631d66d%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479407369%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D4a8f6232c9c1b5669ced51f6039a1e90;
+      expires=Thu, 17-Nov-2016 20:29:29 GMT; path=/
+    - csrf_xmen=4cbacfc759f7e983214390e26e14a6d3; expires=Thu, 17-Nov-2016 20:29:29
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16511'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:41:39 GMT
+recorded_at: Thu, 17 Nov 2016 18:29:29 GMT
