--- a/www.parliament.gh/83c83f5e508823035b49a262618d2b7610b4b48f.yml
+++ b/www.parliament.gh/83c83f5e508823035b49a262618d2b7610b4b48f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:39:40 GMT
+    - Thu, 17 Nov 2016 18:29:49 GMT
     Server:
     - Apache
     X-Powered-By:
@@ -30,18 +30,18 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=539fc69561ce2254a2b72102810e7696; path=/
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22c07c4481f24ec706ad1effbdaab6e852%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382780%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D9c3cffbc1e4ec33bbb30a450f619b0f8;
-      expires=Thu, 17-Nov-2016 13:39:40 GMT; path=/
-    - csrf_xmen=14d9b1d007b13eb16cb6f2695d854620; expires=Thu, 17-Nov-2016 13:39:40
+    - PHPSESSID=e132a15db78698cc7c670f0aa596ec4a; path=/
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22e0feda7e032ede82b9674f65c4997767%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479407389%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7De00d44b7659da40010b0b48a726ed4ec;
+      expires=Thu, 17-Nov-2016 20:29:49 GMT; path=/
+    - csrf_xmen=7e5db1e3960bc0e3da12da78f7f4a61c; expires=Thu, 17-Nov-2016 20:29:49
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '78154'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:39:41 GMT
+recorded_at: Thu, 17 Nov 2016 18:29:49 GMT
