--- a/www.parliament.gh/62321efeab9c00f870ca81a021724594f5502f2a.yml
+++ b/www.parliament.gh/62321efeab9c00f870ca81a021724594f5502f2a.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:41:55 GMT
+    - Thu, 17 Nov 2016 18:32:55 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22a8776dee2b34ff3798f1e7288dd69971%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382915%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D4538d604191a8bf58608b664ac8dd8f5;
-      expires=Thu, 17-Nov-2016 13:41:55 GMT; path=/
-    - csrf_xmen=f4bc312ff42ad0b393aa731dd1011a1d; expires=Thu, 17-Nov-2016 13:41:55
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22ff86b943f12e089e2664fb3a16a62c12%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479407575%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D4f26b018912cf3772b140500ced76af8;
+      expires=Thu, 17-Nov-2016 20:32:55 GMT; path=/
+    - csrf_xmen=d265f6682d068c373e1fc72c7e9ecdc5; expires=Thu, 17-Nov-2016 20:32:55
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16575'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:41:55 GMT
+recorded_at: Thu, 17 Nov 2016 18:32:55 GMT
