--- a/www.parliament.gh/a1784240f31d64fe9c724372f7ca6da950aef7c7.yml
+++ b/www.parliament.gh/a1784240f31d64fe9c724372f7ca6da950aef7c7.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:42:10 GMT
+    - Thu, 17 Nov 2016 18:33:30 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%225078ec63876cceda2510f7caee6b9f6a%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382930%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D39d0ddae5682398fdf0bd10cdc660806;
-      expires=Thu, 17-Nov-2016 13:42:10 GMT; path=/
-    - csrf_xmen=4cfe852f5a289dcf95f0a061d7492b64; expires=Thu, 17-Nov-2016 13:42:10
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%227abb7a084c0518aedd6f5efe0c4f872b%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479407610%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D32ef3680bd05c7276ed9a73dadfb8b94;
+      expires=Thu, 17-Nov-2016 20:33:30 GMT; path=/
+    - csrf_xmen=2e4939abb23830d26285bf1414577cb6; expires=Thu, 17-Nov-2016 20:33:30
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16684'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:42:10 GMT
+recorded_at: Thu, 17 Nov 2016 18:33:31 GMT
