--- a/www.parliament.gh/35375937606375fb99ca14a94746ec527d1091e5.yml
+++ b/www.parliament.gh/35375937606375fb99ca14a94746ec527d1091e5.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:42:26 GMT
+    - Thu, 17 Nov 2016 18:33:52 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%228fca5435fe5966966b0460da42485794%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382946%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dc6f25461b75e80286d11199009221ebb;
-      expires=Thu, 17-Nov-2016 13:42:26 GMT; path=/
-    - csrf_xmen=5c5cdaf53c6f45104b9a9800e513e496; expires=Thu, 17-Nov-2016 13:42:26
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22b70644c9f60fddc2cee6a869494f9b91%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479407632%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D86a051cf45315059688c7cfc4cd76003;
+      expires=Thu, 17-Nov-2016 20:33:52 GMT; path=/
+    - csrf_xmen=342db9721f784706a657fe2226a27e13; expires=Thu, 17-Nov-2016 20:33:52
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16836'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:42:26 GMT
+recorded_at: Thu, 17 Nov 2016 18:33:52 GMT
