--- a/www.parliament.gh/03be62d53559823ce71c78651454a1e1998b759c.yml
+++ b/www.parliament.gh/03be62d53559823ce71c78651454a1e1998b759c.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:42:59 GMT
+    - Thu, 17 Nov 2016 18:34:51 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22619a71c6c260d2c1129b93b415d9d709%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382979%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D5a48644323a1ff5e3d04e3c62e39ae48;
-      expires=Thu, 17-Nov-2016 13:42:59 GMT; path=/
-    - csrf_xmen=812fb95830c3e5ad338865b8a8569757; expires=Thu, 17-Nov-2016 13:42:59
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22c17c386cfccb545d36b76e4ad08c59cb%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479407691%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D2c554913ac37f5561b4910f7eb99450b;
+      expires=Thu, 17-Nov-2016 20:34:51 GMT; path=/
+    - csrf_xmen=b61ce2b91d6ec79e4e4240d01c8855e9; expires=Thu, 17-Nov-2016 20:34:51
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16517'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:42:59 GMT
+recorded_at: Thu, 17 Nov 2016 18:34:51 GMT
