--- a/www.parliament.gh/f330c08c13b3616a8255556612fda87972833628.yml
+++ b/www.parliament.gh/f330c08c13b3616a8255556612fda87972833628.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:43:18 GMT
+    - Thu, 17 Nov 2016 18:35:09 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%229e4aaa36ccf0e6527dca96f2d5eb7452%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479382998%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D7235b4a1e26334698214ccf8359335e5;
-      expires=Thu, 17-Nov-2016 13:43:18 GMT; path=/
-    - csrf_xmen=e769fe3f69b4413b1c0207dd5e03c320; expires=Thu, 17-Nov-2016 13:43:18
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2275b54a2bf567b5dabbf462bcb4b630f1%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479407709%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D339ff0a8bf9a748481271b03a85e9a6e;
+      expires=Thu, 17-Nov-2016 20:35:09 GMT; path=/
+    - csrf_xmen=330bea3ede5bb1f49413e646f00e29d4; expires=Thu, 17-Nov-2016 20:35:09
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16567'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:43:18 GMT
+recorded_at: Thu, 17 Nov 2016 18:35:09 GMT
