200 OK http://www.parliament.gh/parliamentarians/421

--- a/www.parliament.gh/0b4a7937630a784ec2a72517e69452eb77e850da.yml
+++ b/www.parliament.gh/0b4a7937630a784ec2a72517e69452eb77e850da.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:44:04 GMT
+    - Thu, 17 Nov 2016 18:35:46 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2259a8e4d74b5148a572ef2b55260b6c26%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479383044%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dc637261ad34e922e05a5e2ec7320fa07;
-      expires=Thu, 17-Nov-2016 13:44:04 GMT; path=/
-    - csrf_xmen=8eb138d497d7392da7a4c4d4571aa038; expires=Thu, 17-Nov-2016 13:44:04
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22dd78dd8337dae067c33d719d259bc56f%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479407746%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D26228dd364ca5fe3721cbc59515f9c12;
+      expires=Thu, 17-Nov-2016 20:35:46 GMT; path=/
+    - csrf_xmen=4e3553305b21c8b906c1bc53308b73b6; expires=Thu, 17-Nov-2016 20:35:46
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16539'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:44:04 GMT
+recorded_at: Thu, 17 Nov 2016 18:35:46 GMT
