200 OK http://www.parliament.gh/parliamentarians/305

--- a/www.parliament.gh/28465a279341f4d42c55d2cff527d3cf84bdeb79.yml
+++ b/www.parliament.gh/28465a279341f4d42c55d2cff527d3cf84bdeb79.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:45:06 GMT
+    - Thu, 17 Nov 2016 18:37:07 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22d36888aec7a452fb96bf72db55f59934%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479383106%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dd3425845115ea20f87cb72fba732d000;
-      expires=Thu, 17-Nov-2016 13:45:06 GMT; path=/
-    - csrf_xmen=33a056ebbcc4ef7eb1ba4984bcd5f831; expires=Thu, 17-Nov-2016 13:45:06
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%222ab04779a95116de571b8420f7fa17d0%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479407827%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D553f5cd0db7abf04efba611e1898d3b7;
+      expires=Thu, 17-Nov-2016 20:37:07 GMT; path=/
+    - csrf_xmen=e3fe80567c5510c39ada48a6f6cf49f2; expires=Thu, 17-Nov-2016 20:37:07
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16666'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:45:06 GMT
+recorded_at: Thu, 17 Nov 2016 18:37:07 GMT
