200 OK http://www.parliament.gh/parliamentarians/293

--- a/www.parliament.gh/23a8175da705d08e31d67ea86942b854f264d573.yml
+++ b/www.parliament.gh/23a8175da705d08e31d67ea86942b854f264d573.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:45:21 GMT
+    - Thu, 17 Nov 2016 18:37:26 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22555e90bc720727cf19f7c2c80a567696%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479383121%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D9c5cd82c3a2ee9ffc4b118fcc8d80b74;
-      expires=Thu, 17-Nov-2016 13:45:21 GMT; path=/
-    - csrf_xmen=ce54a3c42f8bb6d68feecdee7c2f887d; expires=Thu, 17-Nov-2016 13:45:21
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%225b40ac3ed7d59cf023b7ebea4cf6b4db%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479407846%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D6b8b9336b2be9defa844fa6317b79a93;
+      expires=Thu, 17-Nov-2016 20:37:26 GMT; path=/
+    - csrf_xmen=9eeed59af9f2398eaff4629bd30ceed6; expires=Thu, 17-Nov-2016 20:37:26
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16388'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:45:21 GMT
+recorded_at: Thu, 17 Nov 2016 18:37:26 GMT
