200 OK http://www.parliament.gh/parliamentarians/312

--- a/www.parliament.gh/e8cd67dde3d9e50a9af7e79472e2309307e202b8.yml
+++ b/www.parliament.gh/e8cd67dde3d9e50a9af7e79472e2309307e202b8.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:45:38 GMT
+    - Thu, 17 Nov 2016 18:37:44 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22329ba2140587a531dc58e44dccde27f6%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479383138%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D3e295f4ad7afd06040ca87c93cfc3189;
-      expires=Thu, 17-Nov-2016 13:45:38 GMT; path=/
-    - csrf_xmen=faadc2829ac8d59d60aaae1bc0104367; expires=Thu, 17-Nov-2016 13:45:38
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%229e6cbceb7f6fd92cfc7a19d35d249145%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479407864%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D6bf734007674d4c35f09ccc659e1e0fc;
+      expires=Thu, 17-Nov-2016 20:37:44 GMT; path=/
+    - csrf_xmen=f5653f985cde3a0f94b51a0b0c336c4f; expires=Thu, 17-Nov-2016 20:37:44
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16545'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:45:38 GMT
+recorded_at: Thu, 17 Nov 2016 18:37:44 GMT
