200 OK http://www.parliament.gh/parliamentarians/427

--- a/www.parliament.gh/b3d7089f16bca06f59d60e882188c57911466f0a.yml
+++ b/www.parliament.gh/b3d7089f16bca06f59d60e882188c57911466f0a.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:49:28 GMT
+    - Thu, 17 Nov 2016 18:40:16 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22b8b064a4c95748cdb1d1740895118c4e%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479383368%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Da55e6ccf92efb66be8d34d182d2883dd;
-      expires=Thu, 17-Nov-2016 13:49:28 GMT; path=/
-    - csrf_xmen=a7c516ba6b635a1da806f19d706f8e61; expires=Thu, 17-Nov-2016 13:49:28
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22b2245362a061213ccf764902e9c2d14f%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479408016%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D2a53aa80a5fb80d88401ea371ef8520c;
+      expires=Thu, 17-Nov-2016 20:40:16 GMT; path=/
+    - csrf_xmen=3075fdc565b19a3edbeadb7f268c2278; expires=Thu, 17-Nov-2016 20:40:16
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '15954'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:49:28 GMT
+recorded_at: Thu, 17 Nov 2016 18:40:16 GMT
